# ai-volution

./: .gitignore  app.py  backup_output.json  espn_data.json  flake.nix  index.html  indianexpress_data.json  landing_page.html  merge.py  ndtv_data.json  pyproject.toml  reuters.py  techcrunch_data.json  test.py
scrapy-scraper/news_scraper/news_scraper/spiders/: news_spider.py
utils/: classification_with_ocr.py
